Retail Lending-Production/src/objects/Bank_Rates__c.object
<CustomObject>
    <fields>
        <fullName>Slab_Rates__c</fullName>
        <label>Slab Rates</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;25 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;30 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-75 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-75 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-100 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;75 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;75 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&lt;100 lacs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;100 lacs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_of_Property__c</fullName>
        <label>Status of Property</label>
        <picklist>
            <picklistValues>
                <fullName>Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Construction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Teaser_Fixed__c</fullName>
        <label>Teaser Fixed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tenure_in_years__c</fullName>
        <label>Tenure in years</label>
        <picklist>
            <picklistValues>
                <fullName>1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 20 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Loan__c</fullName>
        <label>Type of Rates</label>
        <picklist>
            <picklistValues>
                <fullName>Regular Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Floating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over Draft Floating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regular Semi-Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over draft Semi-Fixed</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>dob__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>itr_co_y1__c</fullName>
        <label>itr co y1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>itr_y1__c</fullName>
        <description>Enter the amount for IT Returns</description>
        <label>itr y1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type_of_industry__c</fullName>
        <label>type of industry</label>
        <picklist>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food&amp;beverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecommunication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bank Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bank Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>